...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="88dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:nextFocusDown="@+id/fab"
...
