...
                        android:contentDescription="@null"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    style="@style/TextSecure.TitleTextStyle"
                    android:id="@+id/toolbar_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dp"
...
